services/paperless/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paperless
  namespace: paperless
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: authelia-add-https@kubernetescrd,authelia-authelia-forwardauth@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
  - host: documents.completeautomate.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: paperless-web
            port:
              number: 8000
